Updated CSS files with correct Font Family file path

--- a/Web Page Code/cart.css
+++ b/Web Page Code/cart.css
@@ -1,4 +1,7 @@
-/*CSS guidline sheet*/
+@font-face {
+    font-family: "Marimpa";
+    src: url("C:/Users/Gallo/OneDrive/Documents/GitHub/CS492/Web Page Code/Marimpa.ttf") format("truetype");
+}
 
 body {
 	background-color: #219EBC;
