--- a/Web Page Code/coupons.css
+++ b/Web Page Code/coupons.css
@@ -1,4 +1,7 @@
-/*CSS guidline sheet*/
+@font-face {
+    font-family: "Marimpa";
+    src: url("C:/Users/Gallo/OneDrive/Documents/GitHub/CS492/Web Page Code/Marimpa.ttf") format("truetype");
+}
 
 body {
 	background-color: #219EBC;
