--- a/Web Page Code/style.css
+++ b/Web Page Code/style.css
@@ -1,32 +1,37 @@
 @font-face {
     font-family: "Marimpa";
-    src: url("C:/Users/Gallo/OneDrive/Documents/GitHub/CS492/Web Page Code/Marimpa.ttf") format("truetype");
+    src: url("Marimpa.ttf") format("truetype");
 }
 
 
 .navbar ul{
-    list-style-type: none;
-    background-color: #8ECAE6;
-    overflow: hidden;
-    text-align: center;
-    border: 5px solid #023047;
+  list-style-type: none;
+  background-color: #8ECAE6;
+  overflow: hidden;
+  text-align: center;
+  border: 5px solid #023047;
+  padding: 0;
+  margin: 0;
 }
 .navbar a{
-    color: #023047;
-    text-decoration: none;
-    padding-right: 20px;
-    padding-left: 20px;
-    display: block;
-    text-align: center;
-    font-family: "Marimpa", sans-serif;
-    text-transform: uppercase;
-    font-weight: bold;
+  color: #023047;
+  text-decoration: none;
+  padding: 10px 20px;
+  display: block;
+  text-align: center;
+  font-family: "Marimpa", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
 }
-.navbar a:hover{
-    background-color: #4a798f;
-}    
+
+.navbar a:hover {
+  transform: scale(1.50);
+  transition: transform 0.2s ease-in-out;
+}
+
 .navbar li{
     float:left;
+    width: auto;
 }
 body {
     background-color: #219EBC;
@@ -39,6 +44,22 @@ body {
     font-weight: bold;
     font-size: 48px;
   }
+  .titleText {
+    color: #FFB703;
+    font-family: "Marimpa", sans-serif;
+    font-size: 36px;
+    text-align: center;
+    margin-bottom: 20px; /* Add spacing below the title */
+}
+
+  hr.title-separator {
+    border-top: 3px solid #023047; /* Adjust as needed */
+    border-bottom: none;
+    width: auto; /* Adjust width as needed */
+    margin: 10px auto 20px auto; 
+  }
+ 
+
   h3{
     color: #FFB703;
     text-align: center;
@@ -52,7 +73,10 @@ body {
     font-size: 20px;
   }
 .pizza{
-    width: 600px;
+    display: block;
+    width: 1200px;
     height: auto;
     border: 2px solid #023047;
+    margin-right: auto;
+    margin-left: auto;
 }
