--- a/Web Page Code/menu.css
+++ b/Web Page Code/menu.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "Marimpa";
-	src: url("C:/Users/Gallo/OneDrive/Documents/GitHub/CS492/Web Page Code/Marimpa.ttf") format("truetype");
+	src: url("Marimpa.ttf") format("truetype");
 }
 
 body {
