--- a/Web Page Code/menu.css
+++ b/Web Page Code/menu.css
@@ -5,6 +5,7 @@
 
 body {
 	background-color: #219EBC;
+     zoom: 90%;
 }
 .nbar ul{
      list-style-type: none;
@@ -12,12 +13,13 @@ body {
      overflow: hidden;
      text-align: center;
      border: 5px solid #023047;
+     padding: 0;
+     margin: 0;
  }
  .nbar a{
      color: #023047;
      text-decoration: none;
-     padding-right: 20px;
-     padding-left: 20px;
+     padding: 10px 20px;
      display: block;
      text-align: center;
      font-family: "Marimpa", sans-serif;
@@ -25,11 +27,13 @@ body {
      font-weight: bold;
  }
  .nbar a:hover{
-     background-color: #4a798f;
+     transform: scale(1.50);
+     transition: transform 0.2s ease-in-out;
  
  }
  .nbar li{
      float:left;
+     width:auto;
  }
 
 
@@ -49,10 +53,6 @@ body {
  	margin: 800;
  }
 
-
-
-
-
 .menuText {
 	color: #FFB703;
 	font-family: "Marimpa", sans-serif;
@@ -67,336 +67,105 @@ body {
 	font-size: 36px;
 	text-align: center;
 }
-.CPt {
-	color: #FFB703;
-	font-family: "Marimpa", sans-serif;
-	font-size: 24px;
-	position: absolute;
-	left:225;
-	top: 270;
-}
-.CPd {
-	color: #023047;
-	font-family: "Marimpa", sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:225;
-	top: 330;
-	padding-right: 800;
-}
-.CPp {
-	color: #023047;
-	font-family: sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:600;
-	top: 420;
-	padding-right: 800
-}
-.CPb {
-	border: 30%;
-	background-color: #FB8500;
-	font-size: 16px;
-	padding: 16px 32px;
-	position:absolute; 
-	left:230; 
-	top: 410;
-	border-radius: 20px;
+
+
+.customize {
+     border: 30%;
+     background-color: #FB8500;
+     font-size: 16px;
+     padding: 16px 32px;
+     border-radius: 20px;
+     margin-top: 130px;
+     margin-left: 30px;
+     width:200px;
+     height:70px;
 }
 
 
-.T1t {
-	color: #FFB703;
-	font-family: "Marimpa", sans-serif;
-	font-size: 24px;
-	position: absolute;
-	left:965;
-	top: 270;
-}
-.T1d {
-	color: #023047;
-	font-family: "Marimpa", sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:965;
-	top: 330;
-	padding-right: 20;
-}
-.T1p {
-	color: #023047;
-	font-family: sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:1340;
-	top: 420
-}
-.T1b {
-	border: 30%;
-	background-color: #FB8500;
-	font-size: 16px;
-	padding: 16px 32px;
-	position:absolute; 
-	left:970; 
-	top: 410;
-	border-radius: 20px
+.container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr 3fr) ;
+  grid-template-rows: auto;
+  grid-row-gap: 100px;
+  width: 
 }
 
-.T2t {
-	color: #FFB703;
-	font-family: "Marimpa", sans-serif;
-	font-size: 24px;
-	position: absolute;
-	left:225;
-	top: 570;
-}
-.T2d {
-	color: #023047;
-	font-family: "Marimpa", sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:225;
-	top: 630;
-	padding-right: 800;
-}
-.T2p {
-	color: #023047;
-	font-family: sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:600;
-	top: 720;
-	padding-right: 800
-}
-.T2b {
-	border: 30%;
-	background-color: #FB8500;
-	font-size: 16px;
-	padding: 16px 32px;
-	position:absolute; 
-	left:230; 
-	top: 710;
-	border-radius: 20px
-}
-
-.MLt {
-	color: #FFB703;
-	font-family: "Marimpa", sans-serif;
-	font-size: 24px;
-	position: absolute;
-	left:965;
-	top: 570;
-}
-.MLd {
-	color: #023047;
-	font-family: "Marimpa", sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:965;
-	top: 630;
-	padding-right: 20;
-}
-.MLp {
-	color: #023047;
-	font-family: sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:1340;
-	top: 720
-}
-.MLb {
-	border: 30%;
-	background-color: #FB8500;
-	font-size: 16px;
-	padding: 16px 32px;
-	position:absolute; 
-	left:970; 
-	top: 710;
-	border-radius: 20px
-}
-.HWt {
-	color: #FFB703;
-	font-family: "Marimpa", sans-serif;
-	font-size: 24px;
-	position: absolute;
-	left:225;
-	top: 870;
-}
-.HWd {
-	color: #023047;
-	font-family: "Marimpa", sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:225;
-	top: 930;
-	padding-right: 800;
-}
-.HWp {
-	color: #023047;
-	font-family: sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:600;
-	top: 1020;
-	padding-right: 800
-}
-.HWb {
-	border: 30%;
-	background-color: #FB8500;
-	font-size: 16px;
-	padding: 16px 32px;
-	position:absolute; 
-	left:230; 
-	top: 1010;
-	border-radius: 20px
-}
-
-.BQt {
-	color: #FFB703;
-	font-family: "Marimpa", sans-serif;
-	font-size: 24px;
-	position: absolute;
-	left:965;
-	top: 870;
-}
-.BQd {
-	color: #023047;
-	font-family: "Marimpa", sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:965;
-	top: 930;
-	padding-right: 20;
-}
-.BQp {
-	color: #023047;
-	font-family: sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:1340;
-	top: 1020
-}
-.BQb {
-	border: 30%;
-	background-color: #FB8500;
-	font-size: 16px;
-	padding: 16px 32px;
-	position:absolute; 
-	left:970; 
-	top: 1010;
-	border-radius: 20px
+.photo {
+     height: 220px;
+     width: 220px;
 }
 
 
 
-
-.BFt {
-	color: #FFB703;
-	font-family: "Marimpa", sans-serif;
-	font-size: 24px;
-	position: absolute;
-	left:225;
-	top: 1170;
+.item-a {
+    grid-column: 2/2;
+    grid-row: 1/1;
+    color: #023047;
+    font-family: "Marimpa", sans-serif;
+    font-size: 14px;
+    margin-left: 10px;
 }
-.BFd {
-	color: #023047;
-	font-family: "Marimpa", sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:225;
-	top: 1230;
-	padding-right: 800;
+.item-b {
+    grid-column: 4/4;
+    grid-row: 1/1;
+    color: #023047;
+    font-family: "Marimpa", sans-serif;
+    font-size: 14px;
+    margin-left: 10px;
 }
-.BFp {
-	color: #023047;
-	font-family: sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:600;
-	top: 1320;
-	padding-right: 800
+.item-c {
+    grid-column: 2/2;
+    grid-row: 2/2;
+    color: #023047;
+    font-family: "Marimpa", sans-serif;
+    font-size: 14px;
+    margin-left: 10px;
 }
-.BFb {
-	border: 30%;
-	background-color: #FB8500;
-	font-size: 16px;
-	padding: 16px 32px;
-	position:absolute; 
-	left:230; 
-	top: 1310;
-	border-radius: 20px
+.item-d {
+    grid-column: 4/4;
+    grid-row: 2/2;
+    color: #023047;
+    font-family: "Marimpa", sans-serif;
+    font-size: 14px;
+    margin-left: 10px;
 }
-
-.VGt {
-	color: #FFB703;
-	font-family: "Marimpa", sans-serif;
-	font-size: 24px;
-	position: absolute;
-	left:965;
-	top: 1170;
+.item-e {
+    grid-column: 2/2;
+    grid-row: 3/3;
+    color: #023047;
+    font-family: "Marimpa", sans-serif;
+    font-size: 14px;
+    margin-left: 10px;
 }
-.VGd {
-	color: #023047;
-	font-family: "Marimpa", sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:965;
-	top: 1230;
-	padding-right: 20;
+.item-f {
+    grid-column: 4/4;
+    grid-row: 3/3;
+    color: #023047;
+    font-family: "Marimpa", sans-serif;
+    font-size: 14px;
+    margin-left: 10px;
 }
-.VGp {
-	color: #023047;
-	font-family: sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:1340;
-	top: 1320
+.item-g {
+    grid-column: 2/2;
+    grid-row: 4/4;
+    color: #023047;
+    font-family: "Marimpa", sans-serif;
+    font-size: 14px;
+    margin-left: 10px;
 }
-.VGb {
-	border: 30%;
-	background-color: #FB8500;
-	font-size: 16px;
-	padding: 16px 32px;
-	position:absolute; 
-	left:970; 
-	top: 1310;
-	border-radius: 20px
+.item-h {
+    grid-column: 4/4;
+    grid-row: 4/4;
+    color: #023047;
+    font-family: "Marimpa", sans-serif;
+    font-size: 14px;
+    margin-left: 10px;
 }
-
-
-
-.DXt {
-	color: #FFB703;
-	font-family: "Marimpa", sans-serif;
-	font-size: 24px;
-	position: absolute;
-	left:225;
-	top: 1470;
-}
-.DXd {
-	color: #023047;
-	font-family: "Marimpa", sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:225;
-	top: 1530;
-	padding-right: 800;
-}
-.DXp {
-	color: #023047;
-	font-family: sans-serif;
-	font-size: 14px;
-	position: absolute;
-	left:600;
-	top: 1620;
-	padding-right: 800
-}
-.DXb {
-	border: 30%;
-	background-color: #FB8500;
-	font-size: 16px;
-	padding: 16px 32px;
-	position:absolute; 
-	left:230; 
-	top: 1610;
-	border-radius: 20px
+.item-i {
+    grid-column: 2/2;
+    grid-row: 5/5;
+    color: #023047;
+    font-family: "Marimpa", sans-serif;
+    font-size: 14px;
+    margin-left: 10px;
 }
