--- a/Web Page Code/customize.css
+++ b/Web Page Code/customize.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: "Marimpa";
-    src: url("C:/Users/Gallo/OneDrive/Documents/GitHub/CS492/Web Page Code/Marimpa.ttf") format("truetype");
+     font-family: "Marimpa";
+     src: url("Marimpa.ttf") format("truetype");
 }
 
 body {
@@ -12,12 +12,13 @@ body {
      overflow: hidden;
      text-align: center;
      border: 5px solid #023047;
+     padding: 0;
+     margin: 0;
  }
  .nbar a{
      color: #023047;
      text-decoration: none;
-     padding-right: 20px;
-     padding-left: 20px;
+     padding: 10px 20px;
      display: block;
      text-align: center;
      font-family: "Marimpa", sans-serif;
@@ -25,12 +26,15 @@ body {
      font-weight: bold;
  }
  .nbar a:hover{
-     background-color: #4a798f;
+     transform: scale(1.50);
+     transition: transform 0.2s ease-in-out;
  
  }
  .nbar li{
      float:left;
+     width:auto;
  }
+
 
 
  hr.rounded {
@@ -133,3 +137,28 @@ body {
      position:absolute;
      left: 750;
      top: 620;
+}
+
+
+.container {
+  display: grid;
+  grid-template-columns: 3fr 4fr 4fr 3fr ;
+  grid-template-rows: auto;
+  grid-row-gap: 60px;
+}
+
+.TTL {
+     color: #FFB703;
+     font-family: "Marimpa", sans-serif;
+     font-size: 48px;
+     text-align: center;
+     font-weight: bold;
+}
+.hT {
+     color: #FFB703;
+     font-family: "Marimpa", sans-serif;
+     font-size: 36px;
+     text-align: left;
+     position: absolute;
+     margin-top: -50px;
+}
